# extended-sketch-interpreter

./: CMakeLists.txt  README.md  debug.pddl
benchmarks/blocks-4/: module.lsp  p-6-1.pddl
benchmarks/blocks-4-clear/: blocks_clear_sketch.lsp  blocks_clear_sketch_new.lsp  module.lsp  p-2-0.pddl  p-200-0.pddl  p-3-0.pddl  p-4-0.pddl  p-4-0_reverse.pddl  sketch.lsp  sketch.pddl  sketch_blai.pddl  sketch_new.lsp
benchmarks/blocks-4-on/: domain.pddl  module.lsp  module_icaps2024.lsp  p-200-0.pddl  p-4-1.pddl  p-8-0.pddl  sketch.lsp  sketch.pddl  sketch_icaps2024.lsp
benchmarks/blocks-4-ontable/: module.lsp  p-200-0.pddl  p-4-1.pddl
benchmarks/blocks-4-tower/: blocks.py  module-rec.lsp  module.lsp  p-2-0.pddl  p-3-0.pddl  p-3-1.pddl  p-4-0.pddl  p-4-1.pddl  p-6-0.pddl
benchmarks/blocks-tower/: module.pddl  p-4-0.pddl
benchmarks/gripper/: fail.sketch  input.txt  sketch.pddl  sketch_0.pddl  sketch_1.pddl  success.module  success.sketch  test.pddl
benchmarks/hanoi/: domain.pddl  hanoi_module.lsp  module.lsp  module.pddl  p01.pddl  p02.pddl  p03.pddl
experiments/: 10-10-23-siwr-autoscale-grounded.py  10-10-23-siwr-autoscale-lifted.py  10-10-23-siwr-downward-grounded.py  10-10-23-siwr-downward-lifted.py  iw-parser.py  serialized-search-parser.py
src/: CMakeLists.txt
src/extended_sketch/: CMakeLists.txt  arguments.cpp  arguments.hpp  cache.hpp  call.cpp  call.hpp  conditions.hpp  declarations.cpp  declarations.hpp  effects.hpp  module.cpp  (+24 more)
src/public/: CMakeLists.txt  brfs.cpp  iwr.cpp  siw.cpp  siw_m.cpp  siw_r.cpp  siwr.cpp  tuple_graph.cpp  utils.cpp  utils.hpp
(+297 files in other folders)
